--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Hercules App</title>
-    <meta name="description" content="An app made by https://hercules.app" />
-    <meta name="author" content="Hercules" />
+    <title>DesignYourSocks - Professional Sock Design Service | Custom Sock Manufacturing</title>
+    <meta name="description" content="Transform your sock ideas into production-ready designs. Professional sock design service with 48hr delivery, unlimited revisions, and manufacturing partnerships. Get started today!" />
+    <meta name="author" content="DesignYourSocks" />
     <link
       rel="icon"
       type="image/svg+xml"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⚡</text></svg>"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧦</text></svg>"
     />
 
-    <meta property="og:title" content="Hercules App" />
+    <meta property="og:title" content="DesignYourSocks - Professional Sock Design Service" />
     <meta
       property="og:description"
-      content="An app made by https://hercules.app"
+      content="Transform your sock ideas into production-ready designs. 48hr delivery, unlimited revisions, and manufacturing partnerships."
     />
     <meta property="og:type" content="website" />
     <meta
@@ -30,7 +30,7 @@
       name="twitter:image"
       content="https://hercules.app/og/app/%VITE_HERCULES_WEBSITE_ID%.png"
     />
-    <meta name="twitter:site" content="@UseHercules" />
+    <meta name="twitter:site" content="@DesignYourSocks" />
 
     <!-- Detect dark mode preference and set the class before next-themes loads. This avoids a flash of unstyled content (FOUC) when the page loads. -->
     <script>
