--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://hercules.app/og/app/%VITE_HERCULES_WEBSITE_ID%.png"
+      content="/og-image.png"
     />
     <meta property="og:image:type" content="image/png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://hercules.app/og/app/%VITE_HERCULES_WEBSITE_ID%.png"
+      content="/og-image.png"
     />
     <meta name="twitter:site" content="@DesignYourSocks" />
 
